objects/Lookup_Table__c.object
<CustomObject>
    <description>The lookup table (LUT) will be created to define the different support level with each region (Support Center) and Parent Account (Customer name) and the Product Platform.</description>
    <fields>
        <fullName>Comments__c</fullName>
        <description>This field is a used to update the changes description/notes for Lookup table records.</description>
        <label>Comments</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lookup_Table_Formula__c</fullName>
        <description>This field is a used combine the Support Center, Parent Account and Product Platform field values.</description>
        <formula>TEXT(Support_Center__c)+Parent_Account__c+Product_Platform__c</formula>
        <label>Lookup Table Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is a lookup to Account to select the parent account records for Lookup table.</description>
        <label>Parent Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Parent.Id</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lookup Tables</relationshipLabel>
        <relationshipName>Lookup_Tables</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Platform__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is a lookup to Cadence Platform to select the parent account records for Lookup table</description>
        <label>Product Platform</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Cadence_Platform__c.Cos_Visibility__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Cadence_Platform__c.Status__c</field>
                <operation>equals</operation>
                <value>ACTIVE</value>
            </filterItems>
            <filterItems>
                <field>Cadence_Platform__c.Name</field>
                <operation>notEqual</operation>
                <value>Design IP</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Cadence_Platform__c</referenceTo>
        <relationshipLabel>Lookup Tables</relationshipLabel>
        <relationshipName>Lookup_Tables</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This field is a dropdown to choose Active/Inactive values for Lookup table.</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>InActive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Center__c</fullName>
        <description>This field is a dropdown to choose the support center values for Lookup table.</description>
        <label>Support Center</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Israel</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>Russia</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Level__c</fullName>
        <description>This field is a dropdown to choose the support level values for Lookup table</description>
        <label>Support Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Advanced Support</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Field__c</fullName>
        <description>This field is a unique field and used to check the duplicate record.</description>
        <label>Parent Account,Platform &amp; Support Center</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Lookup Table</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parent_Account__c</columns>
        <columns>Product_Platform__c</columns>
        <columns>Support_Center__c</columns>
        <columns>Support_Level__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LUT-{0000}</displayFormat>
        <label>Lookup Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lookup Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>